syntax = "proto3";

package cpp;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    optional string name = 1;
}

message HelloReply {
    required string message = 1;
}